Project file changed and default document added.

--- a/Web.config
+++ b/Web.config
@@ -16,4 +16,11 @@
     <compilation debug="true" targetFramework="4.5"/>
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
+  <system.webServer>
+    <defaultDocument enabled="true">
+      <files>
+        <add value="home.htm" />
+      </files>
+    </defaultDocument>
+  </system.webServer>
 </configuration>
