Google Maps crash handled.

--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -13,13 +13,21 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5"/>
-    <pages controlRenderingCompatibilityVersion="4.0"/>
+    <compilation debug="true" targetFramework="4.5" />
+    <pages controlRenderingCompatibilityVersion="4.0" />
   </system.web>
   <system.webServer>
     <defaultDocument enabled="true">
       <files>
-        <add value="home.htm" />
+                <clear />
+                <add value="index.html" />
+                <add value="home.htm" />
+                <add value="Default.htm" />
+                <add value="Default.asp" />
+                <add value="index.htm" />
+                <add value="iisstart.htm" />
+                <add value="default.aspx" />
+                <add value="index.php" />
       </files>
     </defaultDocument>
   </system.webServer>
