Upload and share features developed.

--- a/Web.config
+++ b/Web.config
@@ -15,8 +15,16 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <pages controlRenderingCompatibilityVersion="4.0" />
+    <!--4GB-->
+    <httpRuntime maxRequestLength="2147483647" executionTimeout="2400" />
   </system.web>
   <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="4294967295" />
+        <!--50MB-->
+      </requestFiltering>
+    </security>
     <defaultDocument enabled="true">
       <files>
                 <clear />
@@ -30,5 +38,20 @@
                 <add value="index.php" />
       </files>
     </defaultDocument>
+        <staticContent>
+            <remove fileExtension=".jpg" />
+            <remove fileExtension=".jpeg" />
+            <remove fileExtension=".mp4" />
+            <mimeMap fileExtension=".torrent" mimeType="application/x-bittorrent" />
+            <mimeMap fileExtension=".apk" mimeType="application/vnd.android.package-archive" />
+            <mimeMap fileExtension=".mp4" mimeType="video/octet-stream" />
+            <mimeMap fileExtension=".mkv" mimeType="video/octet-stream" />
+            <mimeMap fileExtension=".jpeg" mimeType="image/octet-stream" />
+            <mimeMap fileExtension=".jpg" mimeType="image/octet-stream" />
+            <!--<mimeMap fileExtension="." mimeType="text/plain" />-->
+        </staticContent>
   </system.webServer>
+  <appSettings>
+      <add key="DownloadLocation" value="D:\downloads" />
+    </appSettings>
 </configuration>
